frontend/tests/cases/negative/patternCoeffect.gr.output
Type checking failed: 
Grading error: frontend/tests/cases/negative/patternCoeffect.gr:7:3:
3 is not approximatable by 2 for type Nat because Nat denotes precise usage.